add config.ru file for push to heroku

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 <form action="/results">
   <div class="form-group">
     <label id="money"> Amount of money</label>
-    <input id="money" name="money" class="form-control" type="number" placeholder="0.00">
+    <input id="money" name="money" class="form-control" type="text" placeholder="0.00">
   </div>
   <button type="submit" class="btn-success"> Send </button>
 
